--- a/PL/Web.config
+++ b/PL/Web.config
@@ -16,6 +16,16 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		
+		<!--envio de correo-->
+
+		<add key="port" value="587" />
+		<add key="useDefaultCredentials" value="false" />
+		<add key="correo" value="adriana.morales1125@gmail.com" />
+		<add key="password" value="imjx fizk ggdq kwup" />
+		<add key="enableSsl" value="true" />
+
+
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8" />
