--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -51,8 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BolsaTrabajo.cs" />
+    <Compile Include="Candidato.cs" />
+    <Compile Include="Carrera.cs" />
+    <Compile Include="Cita.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Universidad.cs" />
+    <Compile Include="Vacante.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DL\DL.csproj">
