--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -52,7 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Colonia.cs" />
+    <Compile Include="Estado.cs" />
+    <Compile Include="Municipio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rol.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DL\DL.csproj">
