OLEDB en web config

--- a/PL/Web.config
+++ b/PL/Web.config
@@ -10,6 +10,7 @@
 	</configSections>
 	<connectionStrings>
 		<add name="AMoralesProgramacionNCapasUsuariosEntities" connectionString="metadata=res://*/AMoralesProgramacionNCapasUsuarios.csdl|res://*/AMoralesProgramacionNCapasUsuarios.ssdl|res://*/AMoralesProgramacionNCapasUsuarios.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AMoralesProgramacionNCapasUsuarios;user id=sa;password=pass@word1;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="OleDBConnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Extended Properties=Excel 12.0 XML; Data Source="/>
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
