--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -59,7 +59,9 @@
     <Compile Include="Colonia.cs" />
     <Compile Include="Empresa.cs" />
     <Compile Include="Estado.cs" />
+    <Compile Include="EstatusCita.cs" />
     <Compile Include="Municipio.cs" />
+    <Compile Include="Piso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Universidad.cs" />
     <Compile Include="Vacante.cs" />
